--- a/livedata-ex/build.gradle
+++ b/livedata-ex/build.gradle
@@ -1,18 +1,15 @@
 plugins {
     id "com.android.library"
     id "kotlin-android"
+    id "maven-publish"
 }
 
-apply plugin: "com.vanniktech.maven.publish"
-
 android {
-    compileSdkVersion 31
+    compileSdk 34
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 31
-        versionCode 1
-        versionName "1.0.1"
+        targetSdkVersion 34
     }
 
     lintOptions {
@@ -36,8 +33,25 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.20"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 
     implementation "com.jakewharton.timber:timber:4.7.1"
+}
+
+group = 'io.github.ztiany'
+version = '1.0'
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = 'io.github.ztiany'
+                artifactId = 'livedata-ex'
+                version = '1.0.0'
+            }
+        }
+    }
 }
