--- a/livedata-ex/build.gradle
+++ b/livedata-ex/build.gradle
@@ -1,10 +1,13 @@
+import com.vanniktech.maven.publish.SonatypeHost
+
 plugins {
     id "com.android.library"
     id "kotlin-android"
-    id "maven-publish"
+    id "com.vanniktech.maven.publish" version "0.30.0"
 }
 
 android {
+    namespace "com.android.base.foundation.livedata"
     compileSdk 31
 
     defaultConfig {
@@ -17,41 +20,58 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.20"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.24"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
 
     implementation "com.jakewharton.timber:timber:4.7.1"
 }
 
-group = 'io.github.ztiany'
-version = '1.0'
+mavenPublishing {
+    // configuring maven central
+    // or when publishing to https://central.sonatype.com/
+    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
+    signAllPublications()
 
-afterEvaluate {
-    publishing {
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                from components.release
-                groupId = 'io.github.ztiany'
-                artifactId = 'livedata-ex'
-                version = '1.0.2'
+    // configuring the pom
+    coordinates("io.github.ztiany", "android-livedata-ex", "1.0.2")
+
+    pom {
+        name = "android-livedata-ex"
+        description = "An android library makes http requesting easy."
+        inceptionYear = "2020"
+        url = "https://github.com/Ztiany/android-livedata-ex/"
+        licenses {
+            license {
+                name = "The Apache License, Version 2.0"
+                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
             }
+        }
+        developers {
+            developer {
+                id = "ztiany"
+                name = "Alien"
+                url = "https://github.com/Ztiany/"
+            }
+        }
+        scm {
+            url = "https://github.com/Ztiany/android-livedata-ex/"
+            connection = "scm:git:git://github.com/Ztiany/android-livedata-ex.git"
+            developerConnection = "scm:git:ssh://git@github.com/Ztiany/android-livedata-ex.git"
         }
     }
 }
